# adb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  adb.sln  adb.sln.nvsettings  config.json  gl1.cpp  glad.c  light.h  prerequisites.txt  run.sh  setup.py  shader.h  solar.sln  utils.cpp
Sample-Test1/: Sample-Test1.vcxproj  Sample-Test1.vcxproj.filters  failed.txt  pch.h  test.cpp
Sample-Test1/x64/Release/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt  ccd.exe.recipe
enc_temp_folder/d7ad383697fb2816d96793564d31f6/: affine_obj.cpp
iAABB/: iAABB.vcxproj  pch.h  test.cpp
inertia/: inertia.vcxproj  test.cpp
model/: CMakeLists.txt  E_othogonal.cpp  FrictionUtils.h  IpcCollisionConstraint.cpp  IpcCollisionConstraint.h  IpcFrictionConstraint.cpp  IpcFrictionConstraint.h  abd.cpp  abd.h  affine_body.h  affine_obj.cpp  affine_obj.h  assemble_matrices.cpp  autogen_edge_edge.cpp  autogen_point_plane.cpp  barrier.cpp  barrier.h  bounds3.h  ccd_toi.cu  col_set.cpp  collision.cpp  collision.h  constraint_set.cu  core_ipc.cpp  cube.h  cubic_roots.cu  cuda_globals.cuh  cuda_glue.cpp  cuda_glue.h  cuda_header.cuh  cuda_header.h  edge_edge.cpp  edge_triangle.cpp  edge_triangle.h  edge_triangle_col.cpp  ee_ipc.cpp  energy.cpp  energy.cu  euler.cpp  euler.cu  (+46 more)
model/autogen/: autogen.cuh  edge_edge_mollifier.cu  line_line.cu  mollifier.cu  point_line.cu  point_plane.cu
model/bvh/: bvh.cpp  bvh.h
model/cuda/: ccd.cu  common.cuh  cubic_roots.cu
ptdistance/: psd.cpp  ptdistance.vcxproj  ptdistance.vcxproj.filters  test.cpp
ptdistance/x64/Release/: ptdistance.exe.recipe  ptdistance.vcxproj.FileListAbsolute.txt
python/: bindings.cpp  test_bindings.py
shaders/: 1.color.vert  1.color.vs  core.frag  cursor.geom  geom.frag  simple.fs  view.fs
spatial hashing/: main.cpp  spatial hashing.vcxproj  spatial hashing.vcxproj.filters
spatial hashing/x64/Debug/: spatial hashing.exe.recipe  spatial hashing.vcxproj.FileListAbsolute.txt
spatial hashing/x64/Release/: spatial hashing.exe.recipe  spatial hashing.ipdb  spatial hashing.vcxproj.FileListAbsolute.txt
test/google_test/: google_test.vcxproj  numerical_grad.cpp  test.cpp
test/test/: test.vcxproj
test_cases/: 10b.json  b2.json  blocks.json  bolt.json  bug.json  cards.json  cards_pt.json  case.json  case2.json  case_pt.json  chains.json  cubic.json  empty.json  friction.json  friction_pt.json  ground_friction.json  links.json  parse.ipynb  script.js  spinnig_cube.cpp  spinning_cube.cpp  static_friction.json  test.h  tests.h  view.html  viewer.ipynb  vis.json
view/: CMakeLists.txt  abdtk.exp  abdtk.lib  camera.h  control.cpp  cudabd.vcxproj  cudabd.vcxproj.filters  env.h  gl1.h  global_variables.h  gui.cpp  gui.vcxproj  integrate.vcxproj  kernel.cu  light.cpp  light.h  main.cpp  mesh.h  model.h  model_view.cpp  path  run.sh  stb_image.h  utils.cpp  utils.h  view.vcxproj  view.vcxproj.filters
view/logs/: log.txt
view/shaders/: 1.color.frag  1.color.fs  core.fs  cursor.vert  geom_.geom  multi_light.fs  skycube.vs
view/shaders/depth/: depth.frag
view/shaders/shadow/: shadow.frag
